я закоментировал предидущий вариант с автомобилем в подвале, замнил изображением как просили, если устроит такой вариант я подчищу верстку как надо

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <div class="footer__right">
             <div class="right-pc">
                 <div class="footer__right-title"> Model S</div>
-                <div class="right-pc__img"><img src="images/Car-frame-pc.png" alt="">
-                    <div class="pointer-left">
+                <div class="right-pc__img"><img src="images/Car-frame-group-pc.png" alt="">
+                    <!-- <div class="pointer-left">
                         <div class="pointer-left__img"><img class="pointer-left__img-pc" src="/images/footer-car-line-left-pc.png" alt=""></div>
                         <div class="pointer-left__desk"> Защита от удара спереди</div>
                     </div>
@@ -198,13 +198,13 @@
                     <div class="pointer-bottom">
                         <div class="pointer-bottom__img"><img class="pointer-bottom__img-pc" src="/images/footer-car-line-bottom-pc.png" alt=""></div>
                         <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="right-mobi">
                 <h3 class="footer__right-title"> Model S</h3>
-                <div class="right-mobi__img"><img src="images/Car-frame-mobi.png" alt="">
-                <div class="pointer-left">
+                <div class="right-mobi__img"><img src="images/Car-frame-group-mobi.png" alt="">
+                <!-- <div class="pointer-left">
                     <div class="pointer-left__img"><img class="pointer-left__img-mobi" src="/images/footer-car-line-left-mobi.png" alt=""></div>
                     <div class="pointer-left__desk"> Защита от удара спереди</div>
                 </div>
@@ -215,13 +215,13 @@
                 <div class="pointer-bottom">
                     <div class="pointer-bottom__img"><img class="pointer-bottom__img-mobi" src="/images/footer-car-line-bottom-mobi.png" alt=""></div>
                     <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
-                </div>
+                </div> -->
                 </div>
             </div>
             <div class="right-ipad">
                 <div class="footer__right-title"> Model S</div>
-                <div class="right-ipad__img"><img src="images/Car-frame-ipad.png" alt="">
-                    <div class="pointer-left">
+                <div class="right-ipad__img"><img src="images/Car-frame-group-ipad.png" alt="">
+                    <!-- <div class="pointer-left">
                         <div class="pointer-left__img"><img class="pointer-left__img-ipad" src="/images/footer-car-line-left-ipad.png" alt=""></div>
                         <div class="pointer-left__desk"> Защита от удара спереди</div>
                     </div>
@@ -232,7 +232,7 @@
                     <div class="pointer-bottom">
                         <div class="pointer-bottom__img"><img class="pointer-bottom__img-ipad" src="/images/footer-car-line-bottom-ipad.png" alt=""></div>
                         <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
